Update Welcome to Clippings page for version 6.2 (issue #271)

--- a/wx-src/pages/welcome.css
+++ b/wx-src/pages/welcome.css
@@ -119,21 +119,21 @@ button.btn-puffy {
 }
 
 .welcome-action-card {
-    width: 256px;
+    width: 280px;
     margin-top: 36px;
-    padding: 16px 32px 16px;
+    padding: 16px 20px 16px;
     border: 1px solid #eee;
     border-radius: 4px;
     box-shadow: 0px 0px 6px 0px #EBEDEA;
-    text-align: center;
     background-position: top;
     background-repeat: no-repeat;
+    text-align: center;
 }
 
 .welcome-action-card > h2 {
     padding-bottom: 8px;
     margin-top: 8px;
-    margin-bottom: 28px;
+    margin-bottom: 36px;
     color: white;
 }
 
